--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
               <div class="user-input">
                 <input type="text" name="user-name" id="user-name" required/>
              <svg class="user-svg" width="18" height="18">
-              <use href="/images/icon.svg#icon-user"></use>
+              <use href="./images/icon.svg#icon-user"></use>
              </svg>
               </div>
             </div>
@@ -395,7 +395,7 @@
              <div class="user-input">
               <input type="tel" name="user-tel" id="user-tel" required/>
              <svg class="user-svg" width="18" height="18">
-              <use href="/images/icon.svg#icon-phone"></use>
+              <use href="./images/icon.svg#icon-phone"></use>
              </svg>
              </div>
             </div>
@@ -405,7 +405,7 @@
              <div class="user-input">
               <input type="email" name="user-mail" id="user-mail" required/>
              <svg class="user-svg" width="18" height="18">
-              <use href="/images/icon.svg#icon-email"></use>
+              <use href="./images/icon.svg#icon-email"></use>
              </svg>
              </div>
             </div>
