--- a/index.html
+++ b/index.html
@@ -380,35 +380,38 @@
           <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
           <div class="inputs">
 
-            <div class="user-container">
-            <label for="user-name" class="user-item">Имя</label>
+            <label class="user-container">Имя
               <div class="user-input">
-                <input type="text" name="user-name" id="user-name" required/>
-             <svg class="user-svg" width="18" height="18">
+                <input type="text" name="user-name" class="user-item" required/>
+              <svg class="user-svg" width="18" height="18">
               <use href="./images/icon.svg#icon-user"></use>
              </svg>
               </div>
-            </div>
+            </label>
 
-            <div class="user-container">
-             <label for="user-tel" class="user-item">Телефон</label>
-             <div class="user-input">
-              <input type="tel" name="user-tel" id="user-tel" required/>
-             <svg class="user-svg" width="18" height="18">
+            <label class="user-container">Телефон
+              <div class="user-input">
+                <input type="tel" name="user-tel" class="user-item" required/>
+              <svg class="user-svg" width="18" height="18">
               <use href="./images/icon.svg#icon-phone"></use>
              </svg>
-             </div>
-            </div>
+              </div>
+            </label>
 
-            <div class="user-container">
-             <label for="user-mail" class="user-item">Почта</label>
-             <div class="user-input">
-              <input type="email" name="user-mail" id="user-mail" required/>
-             <svg class="user-svg" width="18" height="18">
+            <label class="user-container">Почта
+              <div class="user-input">
+                <input type="email" name="user-mail" class="user-item" required/>
+              <svg class="user-svg" width="18" height="18">
               <use href="./images/icon.svg#icon-email"></use>
              </svg>
-             </div>
-            </div>
+              </div>
+            </label>
+
+            <label class="user-container">Комментарий
+              <div class="user-input">
+                <textarea name="feedback" class="user-item textarea" placeholder="Введите текст" rows="10"></textarea>
+              </div>
+            </label>
 
           </div>
         </form>
