--- a/index.html
+++ b/index.html
@@ -409,9 +409,17 @@
 
             <label class="user-container">Комментарий
               <div class="user-input">
-                <textarea name="feedback" class="user-item textarea" placeholder="Введите текст" rows="10"></textarea>
+                <textarea name="feedback" class="user-item textarea" placeholder="Введите текст"></textarea>
               </div>
             </label>
+
+            <label class="checkbox-label">
+              <input type="checkbox" name="circs" 
+              value="agreement">
+              Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a>
+            </label>
+
+            <button type="submit" class="button form-send" >Отправить</button>
 
           </div>
         </form>
