--- a/index.html
+++ b/index.html
@@ -415,7 +415,11 @@
 
             <label class="checkbox-label">
               <input type="checkbox" name="circs" 
-              value="agreement">
+              value="agreement" class="checkbox">
+              <svg width="16" height="15" class="checkbox-icon">
+                <use href="./images/icon.svg#icon-check"></use>
+              </svg>
+              <!-- <span class="checkbox-icon"></span> -->
               Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a>
             </label>
 
